quick css filter update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -226,10 +226,9 @@ float:left;width:22%;
     background-color: #777;
     position: relative;
     top: -126px;
-
-    opacity: .7;
+    opacity: .8;
     max-height: 94px;
-    color: #f1f1f1;
+    color: white;
     text-align: center;
     font-size: small;
        
