--- a/views/sampleLib.jade
+++ b/views/sampleLib.jade
@@ -2,7 +2,7 @@ extends layout
 
 append body
 	div(ng-controller="bodySampleController" )
-		div().row
+		div(style='text-align:center').row
 			+alert-i-warning("The Sample Library is a place to upload or download your favorite samples!","heart")
 		
 		div.packListWrapper
