--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -2,7 +2,7 @@ extends layout
 
 append body
 	.pageController(ng-controller="bodyTipHelperController" style = '' )
-		.div(style="")
+		.div(style="text-align:center")
 			+alert-i-warning("Find your favorite music production tutorials and tips here!","heart")
 		
 		#filterWrapper.row.filterBoxStyle(ng-style="filtersBoxStyle")
