more sstyle filters and about page center

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,7 +1,7 @@
 extends layout
 
 append body
-	.pageController.container(style="text:center")
+	.pageController.container.row(style="text:center;margin:0 auto;")
 		.titleBannerDiv()
 			h1
 				#titleName= title
