--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -170,6 +170,18 @@ float:left;width:22%;
 //    margin-bottom: 1px;
 //    margin:3px;
 //}
+.label-primary.active {
+    margin-right: 1px;
+    background-color: darkslateblue;
+    border-style: double;
+    border-width: thin;
+    border-color: #4a8b2e;
+    border-radius: 3px;
+    color: white;
+    padding-right: 3px;
+    padding-left: 3px;
+}
+
 .label-primary {
     margin-right: 1px;
     background-color: #f6fff3;
