--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -78,15 +78,15 @@ append body
 					//	#titleName= title
 
 
-					#prvButton.keyButton(ng-click="prevButtonClicked()")
+					//#prvButton.keyButton(ng-click="prevButtonClicked()")
 						+btn-xs("Previous")
-					#nxtButton.keyButton(ng-click="nextButtonClicked()" style="float:right")
+					//#nxtButton.keyButton(ng-click="nextButtonClicked()" style="float:right")
 						+btn-xs("Next")
-					#addATipButton.keyButton(ng-click="addATipClicked()"  ng-show="showButton('Add')")
+					//#addATipButton.keyButton(ng-click="addATipClicked()"  ng-show="showButton('Add')")
 						+btn-xs("Add")
-					#editATipButton.keyButton(ng-click="editATipClicked()"  ng-show="showButton('Edit')")
+					//#editATipButton.keyButton(ng-click="editATipClicked()"  ng-show="showButton('Edit')")
 						+btn-xs("Edit")
-					#deleteATipButton.keyButton(ng-click="deleteATipClicked()"  ng-show="showButton('Delete')")
+					//#deleteATipButton.keyButton(ng-click="deleteATipClicked()"  ng-show="showButton('Delete')")
 						+btn-xs("Delete")
 					#tipsWrapper.contentWrapper
 						#tipTitleBlock.titleWrapper
