--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: #f1f1f1;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+   
 }
 p {
     margin: 0;
@@ -290,7 +291,9 @@ float:left;width:22%;
     max-height: 125px;
     transition: max-height 0.5s ease-in;
 }
-
+#tipBody{
+    font-size: 15px;
+}
 
 .tipNavItem{
     max-height: 60px;
