--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -34,7 +34,7 @@ append body
 									.label.label-primary(ng-class='{active:daw.toggle}'){{daw.dawName}}
 							div.filterWrapper#tipVSTFilterWrapper.col-xs-3.col-sm-3.col-md-3.col-lg-3(style="margin-top:5px;display:inline-block;").btnWrapper
 								.btnWrapper(style="float:left")
-									.label.label-default("VST:")
+									.label.label-default() VST:
 								.vstButton(style="float:left" ng-repeat = "vst in vstArray")							
 									input.inputToggleClass(ng-model='vst.toggle' type="checkbox",data-toggle="toggle" name='{{vst.vstName}}' id='inputDawId{{vst.vstName}}' ng-click="filterVstClicked(vst.vstName)")
 									.label.label-primary(ng-class='{active:vst.toggle}'){{vst.vstName}}
