--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -20,8 +20,8 @@ append body
 								//.label.label-primary( ng-class='{active:sound_design_toggle}'  ng-click='sound_design_toggle = !sound_design_toggle') Sound Design
 								//input.inputToggleClass(ng-model='workflow_toggle' type="checkbox",data-toggle="toggle" name='workFlowInputYes' id='workFlowInputYes')
 								//.label.label-primary( ng-class='{active:workflow_toggle}'  ng-click='workflow_toggle = !workflow_toggle') Work Flow
-								.label.label-primary(ng-click="addFilterToggle = !addFilterToggle") Add
-								.label.label-primary(ng-click="deleteFilterToggle = !deleteFilterToggle") Delete
+								.label.label-primary(ng-click="addFilterToggle = !addFilterToggle" ng-show='isAdmin()') Add
+								.label.label-primary(ng-click="deleteFilterToggle = !deleteFilterToggle"  ng-show='isAdmin()') Delete
 							div.filterWrapper#tipGenreFilterWrapper.col-xs-3.col-sm-3.col-md-3.col-lg-3(style="margin-top:5px;display:inline-block;").btnWrapper
 								.label.label-default() Genre:
 								div(style='display:inline-block')
